--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
 
     <TextView
         android:id="@+id/task_name"
@@ -14,8 +16,22 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="aaa"
-        android:textColor="#00A8D1"
+        android:textColor="#000"
         android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/task_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/task_name"
+        android:backgroundTint="#00A8D1"
+        android:text="Excluir Tarefa"
+        android:textColor="#FFFFFF"
+        android:padding="12dp"
+        android:radius="12dp"
+        android:elevation="0dp"/>
 
     <CheckBox
         android:id="@+id/task_checkbox"
@@ -27,6 +43,13 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="#D3D3D3"
+        app:layout_constraintTop_toBottomOf="@id/task_button" />
 
 
 
