--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -28,7 +28,7 @@
         android:layout_margin="16dp"
         app:layout_constraintTop_toBottomOf="@+id/task_name"
         android:backgroundTint="#00A8D1"
-        android:text="Excluir Tarefa"
+        android:text="@string/excluir_tarefa"
         android:textColor="#FFFFFF"
         android:padding="12dp"
         android:radius="12dp"
@@ -43,14 +43,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="16dp"
-        android:background="#D3D3D3"
-        app:layout_constraintTop_toBottomOf="@id/task_button" />
 
 
 
